--- a/index.css
+++ b/index.css
@@ -8,13 +8,16 @@ body{
 }
 
 
-
-
 h1{
   text-align: center;
   color: white;
 }
 
+form{
+  width: 480px;
+  height: 200px;
+  margin: 0 auto;
+}
 
   
   
@@ -30,10 +33,9 @@ h1{
     
   }
   
-  button{
+  .btn{
     margin-bottom: 6px;
     border: 1px solid black;
-    width: 150px;
     height: 30px;
     margin-block-start: 5px;
     box-sizing: border-box;
@@ -41,40 +43,17 @@ h1{
   
   }
 
-  button:hover{
+  .btn:hover{
     background-color: rgb(0, 255, 242);
     padding: 10px 40px;
     display: inline-block;
     animation-name: todown;
     animation-duration: 5s;
-    color:wheat;
+    color:rgb(4, 4, 83);
     text-decoration: none;
+    cursor: pointer;
+  }
 
-}
-
-a{
-  background-color: aliceblue;
-  margin-bottom: 6px;
-  border: 1px solid black;
-  width: 150px 150px 150px;
-  margin-block-start: 5px;
-  box-sizing: border-box;
-  border-radius: 5px;
-
-}
-
-a{
-  background-color: white;
-    padding: 5px 58px;
-    display: inline-block;
-    animation-name: todown;
-    animation-duration: 5s;
-    color:wheat;
-    text-decoration: none;
-    color: black;
-
- 
-}
 
 
   .text{
@@ -84,6 +63,14 @@ a{
     margin-top: 200px;
     color:white;
   } 
+
+  @media (max-width: 576px) {  
+   form{
+    width: 280px;
+    height: 200px;
+    
+   }
+  }
 
   
   
